--- a/protocol-params.blockfrost.yaml
+++ b/protocol-params.blockfrost.yaml
@@ -1,5 +1,6 @@
 stake_pool_pledge_influence:
   description: Pool pledge influence
+  original_name: a0
   info: required
   type: number
 coins_per_utxo_size:
@@ -12,14 +13,17 @@ coins_per_utxo_word:
   type: string | nullable
 collateral_percentage:
   description: The percentage of the transactions fee which must be provided as collateral when including non-native scripts
+  original_name: collateral_percent
   info: required
   type: integer | nullable
 constitutional_committee_max_term_length:
   description: Constitutional committee term limits.
+  original_name: committee_max_term_length
   info: required
   type: string | nullable
 constitutional_committee_min_size:
   description: Minimal constitutional committee size.
+  original_name: committee_min_size
   info: required
   type: string | nullable
 cost_models:
@@ -36,54 +40,67 @@ decentralisation_param:
   type: number
 delegate_representative_max_idle_time:
   description: DRep activity period.
+  original_name: drep_activity
   info: required
   type: string | nullable
 delegate_representative_deposit:
   description: DRep deposit amount.
+  original_name: drep_deposit
   info: required
   type: string | nullable
 delegate_representative_voting_thresholds_cc_no_confidence:
   description: DRep Vote threshold for new committee/threshold (state of no-confidence).
+  original_name: dvt_committee_no_confidence
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_cc_normal:
   description: DRep Vote threshold for new committee/threshold (normal state).
+  original_name: dvt_committee_normal
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_hard_fork:
   description: DRep Vote threshold for hard-fork initiation.
+  original_name: dvt_hard_fork_initiation
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_no_confidence:
   description: DRep Vote threshold for motion of no-confidence.
+  original_name: dvt_motion_no_confidence
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_pp_economic:
   description: DRep Vote threshold for protocol parameter changes, economic group.
+  original_name: dvt_p_p_economic_group
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_pp_governance:
   description: DRep Vote threshold for protocol parameter changes, governance group.
+  original_name: dvt_p_p_gov_group
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_pp_network:
   description: DRep Vote threshold for protocol parameter changes, network group.
+  original_name: dvt_p_p_network_group
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_pp_technical:
   description: DRep Vote threshold for protocol parameter changes, technical group.
+  original_name: dvt_p_p_technical_group
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_treasury_withdrawal:
   description: DRep Vote threshold for treasury withdrawal.
+  original_name: dvt_treasury_withdrawal
   info: required
   type: number | nullable
 delegate_representative_voting_thresholds_constitution:
   description: DRep Vote threshold for update to the Constitution.
+  original_name: dvt_update_to_constitution
   info: required
   type: number | nullable
 stake_pool_retirement_epoch_bound:
   description: Epoch bound on pool retirement
+  original_name: e_max
   info: required
   type: integer
 epoch:
@@ -96,10 +113,12 @@ extra_entropy:
   type: string | nullable
 governance_action_deposit:
   description: Governance action deposit.
+  original_name: gov_action_deposit
   info: required
   type: string | nullable
 governance_action_lifetime:
   description: Governance action expiration.
+  original_name: gov_action_lifetime
   info: required
   type: string | nullable
 key_deposit:
@@ -108,10 +127,12 @@ key_deposit:
   type: string
 max_execution_units_per_block_mem:
   description: The maximum number of execution memory allowed to be used in a single block
+  original_name: max_block_ex_mem
   info: required
   type: string | nullable
 max_execution_units_per_block_cpu:
   description: The maximum number of execution steps allowed to be used in a single block
+  original_name: max_block_ex_steps
   info: required
   type: string | nullable
 max_block_header_size:
@@ -120,6 +141,7 @@ max_block_header_size:
   type: integer
 max_block_body_size:
   description: Maximum block body size in Bytes
+  original_name: max_block_size
   info: required
   type: integer
 max_collateral_inputs:
@@ -128,14 +150,17 @@ max_collateral_inputs:
   type: integer | nullable
 max_execution_units_per_transaction_mem:
   description: The maximum number of execution memory allowed to be used in a single transaction
+  original_name: max_tx_ex_mem
   info: required
   type: string | nullable
 max_execution_units_per_transaction_cpu:
   description: The maximum number of execution steps allowed to be used in a single transaction
+  original_name: max_tx_ex_steps
   info: required
   type: string | nullable
 max_transaction_size:
   description: Maximum transaction size
+  original_name: max_tx_size
   info: required
   type: integer
 max_value_size:
@@ -144,10 +169,12 @@ max_value_size:
   type: string | nullable
 min_fee_coefficient:
   description: The linear factor for the minimum fee calculation for given epoch
+  original_name: min_fee_a
   info: required
   type: integer
 min_fee_constant:
   description: The constant factor for the minimum fee calculation
+  original_name: min_fee_b
   info: required
   type: integer
 min_fee_ref_script_cost_per_byte:
@@ -155,6 +182,7 @@ min_fee_ref_script_cost_per_byte:
   type: number | nullable
 min_stake_pool_cost:
   description: Minimum stake cost forced on the pool
+  original_name: min_pool_cost
   info: required
   type: string
 min_utxo:
@@ -163,6 +191,7 @@ min_utxo:
   type: string
 desired_number_of_stake_pools:
   description: Desired number of pools
+  original_name: n_opt
   info: required
   type: integer
 nonce:
@@ -171,14 +200,17 @@ nonce:
   type: string
 stake_pool_deposit:
   description: The amount of a pool registration deposit in Lovelaces
+  original_name: pool_deposit
   info: required
   type: string
 script_execution_prices_mem:
   description: The per word cost of script memory usage
+  original_name: price_mem
   info: required
   type: number | nullable
 script_execution_prices_cpu:
   description: The cost of script execution step usage
+  original_name: price_step
   info: required
   type: number | nullable
 protocol_major_ver:
@@ -191,22 +223,27 @@ protocol_minor_ver:
   type: integer
 stake_pool_voting_thresholds_cc_no_confidence:
   description: Pool Voting threshold for new committee/threshold (state of no-confidence).
+  original_name: pvt_committee_no_confidence
   info: required
   type: number | nullable
 stake_pool_voting_thresholds_cc_default:
   description: Pool Voting threshold for new committee/threshold (normal state).
+  original_name: pvt_committee_normal
   info: required
   type: number | nullable
 stake_pool_voting_thresholds_hard_fork:
   description: Pool Voting threshold for hard-fork initiation.
+  original_name: pvt_hard_fork_initiation
   info: required
   type: number | nullable
 stake_pool_voting_thresholds_no_confidence:
   description: Pool Voting threshold for motion of no-confidence.
+  original_name: pvt_motion_no_confidence
   info: required
   type: number | nullable
 stake_pool_voting_thresholds_pp_security:
   description: Pool Voting threshold for security-relevant protocol parameters changes.
+  original_name: pvt_p_p_security_group
   info: required
   type: number | nullable
 pvtpp_security_group:
@@ -215,9 +252,11 @@ pvtpp_security_group:
   type: number | nullable
 monetary_expansion:
   description: Monetary expansion
+  original_name: rho
   info: required
   type: number
 treasury_expansion:
   description: Treasury expansion
+  original_name: tau
   info: required
   type: number
