--- a/spec.yaml
+++ b/spec.yaml
@@ -199,7 +199,7 @@ endpoints:
     all:
       request: null
       response:
-        aaa:
+        proposals:
           type: array
           items: Proposal
       description: >-
